EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==03/18/2010==
Trevius: Added 3 new Perl Entity commands - GetMobByID(id), GetNPCByID(id), and GetNPCByNPCTypeID(npc_id).

==03/16/2010==
Trevius: Saylinks should no longer cause zone crashes if used outside of EVENTs.  They should function from anywhere now.

==03/13/2010==
Trevius: Added new SetFlyMode(0|1|2|3) Perl Mob command.
Trevius: NPCs in flymode 1 or 2 will no longer use BestZ when pathing to waypoints.
Trevius: Added new optional single client argument to SendAppearanceEffect(effect1, effect2, effect3, effect4, effect5, client) to allow sending the effect only to specific players.

==03/12/2010==
joligario: Fixed some spelling mistakes.

==03/11/2010==
Congdar: bots can now equip items with augments.  required sql:  \utils\sql\svn\1280_bot_augs.sql
Congdar: new bot command '#bot augmentitem' Allows you to augment items for your other bot classes. Your must have the Augmentation Sealer window filled.

==03/10/2010==
Derision: Begging should no longer bug the client. Still needs some work around chance/amount/skillups etc.

==03/07/2010==
Derision: Fix for temporary items on merchants appearing to increase in price.
Leere: Refinement to above and fix for purchase price of stacked items != displayed price * quantity.

==03/05/2010==
Trevius: Inspecting SoF players is now possible.
Derision: A mob corpse will now be left even if a Bot's pet does the most damage.

==03/03/2010==
Trevius: Added functionality to the EQEmu Web Tool to show IP information based on account searches.
Derision: Set Message Type for spells wearing off, experience and leadership messages so they aren't classed as 'Other' by the client chat filters.
Derision: Removed -fpermissive from zone/makefile so invalid type conversions should now cause an error rather than a warning for Linux compiles.

==03/01/2010==